Documentation cleanup